исправила ширину блока в типографии добавила разметку компонентов

--- a/css/style.scss
+++ b/css/style.scss
@@ -220,7 +220,7 @@ input[type="radio"].visually-hidden {
 .typography__tittle-style-headline {
       align-self: flex-start;
       box-sizing: border-box;
-      padding: 0 15px;
+      padding: 0 15px 0 0;
       font-size: 30px;
       line-height: 45px;
       font-weight: 400;
@@ -254,7 +254,7 @@ input[type="radio"].visually-hidden {
 .typography__tittle-style-name {
       box-sizing: border-box;
       width: 356px;
-      padding: 0 15px;
+      padding: 0 15px 0 0;
       font-size: 20px;
       line-height: 30px;
       color: rgba(24, 25, 32, .5);
@@ -303,7 +303,7 @@ input[type="radio"].visually-hidden {
 .typography__text-style-headline {
       align-self: flex-start;
       box-sizing: border-box;
-      padding: 0 15px;
+      padding: 0;
       font-size: 30px;
       line-height: 45px;
       font-weight: 400;
@@ -329,7 +329,7 @@ input[type="radio"].visually-hidden {
 .typography__text-style-name {
       box-sizing: border-box;
       width: 356px;
-      padding: 0 15px;
+      padding: 0 15px 0 0;
       font-size: 20px;
       line-height: 30px;
       color: rgba(24, 25, 32, .5);
@@ -365,7 +365,7 @@ input[type="radio"].visually-hidden {
 .typography__tech-style-headline {
       align-self: flex-start;
       box-sizing: border-box;
-      padding: 0 15px;
+      padding: 0;
       font-size: 30px;
       line-height: 45px;
       font-weight: 400;
@@ -399,7 +399,7 @@ input[type="radio"].visually-hidden {
 .typography__tech-style-name {
       box-sizing: border-box;
       width: 356px;
-      padding: 0 15px;
+      padding: 0 15px 0 0;
       font-size: 20px;
       line-height: 30px;
       color: rgba(24, 25, 32, .5);
@@ -452,7 +452,7 @@ input[type="radio"].visually-hidden {
 .typography__span-style-headline {
       align-self: flex-start;
       box-sizing: border-box;
-      padding: 0 15px;
+      padding: 0;
       font-size: 30px;
       line-height: 45px;
       font-weight: 400;
@@ -478,7 +478,7 @@ input[type="radio"].visually-hidden {
 .typography__span-style-name {
       box-sizing: border-box;
       width: 356px;
-      padding: 0 15px;
+      padding: 0 15px 0 0;
       font-size: 20px;
       line-height: 30px;
       color: rgba(24, 25, 32, .5);
@@ -4600,6 +4600,10 @@ input[type="radio"].visually-hidden {
       padding: 0;
 }
 
+.components__tooltip {
+      margin-bottom: 40px;
+}
+
 .components__tooltip-table {
       display: flex;
       flex-direction: column;
@@ -4742,4 +4746,88 @@ input[type="radio"].visually-hidden {
 
 .components__tooltip-bottom-text:hover~.components__tooltip-bottom-popup {
       display: block;
+}
+
+//  табы
+.components__tab {
+      margin-bottom: 40px;
+}
+
+.components__tab-table {
+      display: flex;
+      flex-direction: column;
+}
+
+.components__tab-headline {
+      align-self: flex-start;
+      box-sizing: border-box;
+      font-size: 30px;
+      line-height: 45px;
+      font-weight: 400;
+      margin-bottom: 30px;
+}
+
+
+.components__tab-name {
+      box-sizing: border-box;
+      width: 356px;
+      font-size: 20px;
+      line-height: 30px;
+      color: rgba(24, 25, 32, .5);
+}
+
+//  тэги
+.components__tag {
+      margin-bottom: 40px;
+}
+
+.components__tag-table {
+      display: flex;
+      flex-direction: column;
+}
+
+.components__tag-headline {
+      align-self: flex-start;
+      box-sizing: border-box;
+      font-size: 30px;
+      line-height: 45px;
+      font-weight: 400;
+      margin-bottom: 30px;
+}
+
+
+.components__tag-name {
+      box-sizing: border-box;
+      width: 356px;
+      font-size: 20px;
+      line-height: 30px;
+      color: rgba(24, 25, 32, .5);
+}
+
+//  прогресс-бары
+.components__progressbar {
+      margin-bottom: 40px;
+}
+
+.components__progressbar-table {
+      display: flex;
+      flex-direction: column;
+}
+
+.components__progressbar-headline {
+      align-self: flex-start;
+      box-sizing: border-box;
+      font-size: 30px;
+      line-height: 45px;
+      font-weight: 400;
+      margin-bottom: 30px;
+}
+
+
+.components__progressbar-name {
+      box-sizing: border-box;
+      width: 356px;
+      font-size: 20px;
+      line-height: 30px;
+      color: rgba(24, 25, 32, .5);
 }
