--- a/css/style.css
+++ b/css/style.css
@@ -2670,6 +2670,96 @@ input[type=radio].visually-hidden {
   border-radius: 100%;
 }
 
+.form-elements__addition-tumbler-small {
+  box-sizing: border-box;
+  padding: 0;
+  margin-bottom: 40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.form-elements__addition-tumbler-big {
+  box-sizing: border-box;
+  padding: 0;
+  margin-bottom: 40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.form-elements__addition-tumbler-blocked {
+  box-sizing: border-box;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.form-elements__tumbler-small-wrapper1 {
+  min-width: 326px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+}
+
+.form-elements__tumbler-small-wrapper2 {
+  min-width: 326px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+}
+
+.tumbler-small__name {
+  font-size: 14px;
+  color: #181920;
+  line-height: 20px;
+}
+
+.tumbler-small__grey {
+  position: relative;
+  box-sizing: border-box;
+  width: 40px;
+  height: 20px;
+  padding: 3px;
+  border-radius: 50px;
+  background-color: rgba(24, 25, 32, 0.1);
+}
+
+.tumbler-small__grey-toggle {
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  background-color: #fff;
+  border-radius: 50px;
+  width: 14px;
+  height: 14px;
+}
+
+.tumbler-small__name {
+  font-size: 14px;
+  color: #181920;
+  line-height: 20px;
+}
+
+.tumbler-small__white {
+  position: relative;
+  box-sizing: border-box;
+  width: 40px;
+  height: 20px;
+  padding: 3px;
+  border-radius: 50px;
+  border: 1px solid rgba(24, 25, 32, 0.1);
+}
+
+.tumbler-small__white-toggle {
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  background-color: #fff;
+  box-shadow: 0 2px 5px 0 rgba(24, 25, 32, 0.2);
+  border-radius: 50px;
+  width: 14px;
+  height: 14px;
+}
+
 .modal-map__main {
   width: 100%;
   box-sizing: border-box;
