--- a/css/style.scss
+++ b/css/style.scss
@@ -4292,6 +4292,98 @@ input[type="radio"].visually-hidden {
 
 // Остальное
 
+// форма загрузки файла 
+.more-file__form-wrapper {
+      width: 680px;
+      margin-bottom: 20px;
+}
+
+.more-file__form {
+      box-sizing: border-box;
+      text-align: center;
+      margin-bottom: 20px;
+      padding: 28px;
+      border: 2px dashed rgba(24, 25, 32, .1);
+      border-radius: 8px;
+      background-color: #f3f3f4;
+}
+
+.more-file__form-text {
+      margin-bottom: 20px;
+      font-size: 20px;
+      line-height: 30px;
+      color: rgba(24, 25, 32, .5);
+}
+
+.more-file__form-button {
+      display: inline-block;
+      padding: 10px 30px;
+      transition: all .1s ease-in-out;
+      color: #fff;
+      line-height: 30px;
+      font-size: 17px;
+      border-radius: 25px;
+      background-color: #2d52da;
+      cursor: pointer;
+      outline: none;
+}
+
+.more-file__form-button:hover,
+.more-file__form-button:focus {
+      background-color: #294bc7;
+}
+
+.more-file__form-submit {
+      display: inline-block;
+      padding: 5px 15px;
+      transition: all .1s ease-in-out;
+      color: #fff;
+      line-height: 30px;
+      font-size: 14px;
+      border-radius: 25px;
+      border: none;
+      outline: none;
+      background-color: #2d52da;
+      cursor: pointer;
+}
+
+.more-file__form-submit:hover,
+.more-file__form-submit:focus {
+      background-color: #294bc7;
+}
+
+.more-file__form-input-wrapper {
+      display: block;
+      width: 100%;
+      height: 100%;
+      cursor: pointer;
+}
+
+#more-file__form-input {
+      display: none;
+}
+
+.more-file__form-value {
+      display: flex;
+      justify-content: space-between;
+}
+
+#more-file__file-name {
+      font-size: 17px;
+      line-height: 25px;
+      color: #181920;
+}
+
+#more-file__file-size {
+      font-size: 17px;
+      line-height: 25px;
+      color: rgba(24, 25, 32, .5);
+}
+
+.more-file__file-preview-img {
+      width: 50px;
+      height: 50px;
+}
 
 // слайдер c отзывами
 
