--- a/css/style.scss
+++ b/css/style.scss
@@ -4318,6 +4318,7 @@ input[type="radio"].visually-hidden {
 .more-file__form-button {
       display: inline-block;
       padding: 10px 30px;
+      margin-bottom: 10px;
       transition: all .1s ease-in-out;
       color: #fff;
       line-height: 30px;
