--- a/css/style.css
+++ b/css/style.css
@@ -4141,6 +4141,7 @@ input[type=radio].visually-hidden {
 .more-file__form-button {
   display: inline-block;
   padding: 10px 30px;
+  margin-bottom: 10px;
   transition: all 0.1s ease-in-out;
   color: #fff;
   line-height: 30px;
