--- a/css/style.scss
+++ b/css/style.scss
@@ -1935,16 +1935,17 @@ input[type="radio"].visually-hidden {
       font-size: 17px;
 }
 
-// .form-elements__button-icon1::after {
-//       content: "";
-//       position: absolute;
-//       top: 0;
-//       left: 0;
-//       width: 30px;
-//       height: 30px;
-//       margin: 10px;
-//       color: #ffffff;
-// }
+.form-elements__button-icon1::before {
+      content: "";
+      position: absolute;
+      top: 10px;
+      left: 20px;
+      width: 30px;
+      height: 30px;
+      background-image: url(../img/refresh.svg);
+      background-size: 30px;
+      background-repeat: no-repeat;
+}
 
 .form-elements__button-icon1:hover,
 .form-elements__button-icon1:focus {
@@ -1952,6 +1953,7 @@ input[type="radio"].visually-hidden {
 }
 
 .form-elements__button-icon2 {
+      position: relative;
       min-width: 200px;
       min-height: 50px;
       padding: 9px 29px 9px 59px;
@@ -1965,12 +1967,26 @@ input[type="radio"].visually-hidden {
       cursor: pointer;
 }
 
+.form-elements__button-icon2::before {
+      content: "";
+      position: absolute;
+      top: 10px;
+      left: 20px;
+      width: 30px;
+      height: 30px;
+      background-image: url(../img/refresh.svg);
+      background-size: 30px;
+      background-repeat: no-repeat;
+}
+
+
 .form-elements__button-icon2:hover,
 .form-elements__button-icon2:focus {
       opacity: .75;
 }
 
 .form-elements__button-roundicon1 {
+      position: relative;
       min-width: 200px;
       min-height: 50px;
       box-sizing: border-box;
@@ -1985,12 +2001,26 @@ input[type="radio"].visually-hidden {
       font-size: 17px;
 }
 
+.form-elements__button-roundicon1::before {
+      content: "";
+      position: absolute;
+      top: 10px;
+      left: 20px;
+      width: 30px;
+      height: 30px;
+      background-image: url(../img/refresh.svg);
+      background-size: 30px;
+      background-repeat: no-repeat;
+}
+
+
 .form-elements__button-roundicon1:hover,
 .form-elements__button-roundicon1:focus {
       background-color: #294bc7;
 }
 
 .form-elements__button-roundicon2 {
+      position: relative;
       min-width: 200px;
       min-height: 50px;
       padding: 9px 29px 9px 59px;
@@ -2002,6 +2032,18 @@ input[type="radio"].visually-hidden {
       font-size: 17px;
       line-height: 30px;
       cursor: pointer;
+}
+
+.form-elements__button-roundicon2::before {
+      content: "";
+      position: absolute;
+      top: 10px;
+      left: 20px;
+      width: 30px;
+      height: 30px;
+      background-image: url(../img/refresh.svg);
+      background-size: 30px;
+      background-repeat: no-repeat;
 }
 
 .form-elements__button-roundicon2:hover,
@@ -2250,6 +2292,7 @@ input[type="radio"].visually-hidden {
 
 
 .form-elements__button-text1 {
+      position: relative;
       min-width: 198px;
       min-height: 30px;
       padding-left: 40px;
@@ -2260,6 +2303,19 @@ input[type="radio"].visually-hidden {
       font-size: 20px;
       line-height: 30px;
       cursor: pointer;
+}
+
+.form-elements__button-text1::before {
+      content: "";
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      width: 30px;
+      height: 30px;
+      background-image: url(../img/keyboard_back.svg);
+      background-size: 30px;
+      background-repeat: no-repeat;
+
 }
 
 .form-elements__button-text1:hover,
@@ -2268,6 +2324,7 @@ input[type="radio"].visually-hidden {
 }
 
 .form-elements__button-text2 {
+      position: relative;
       min-width: 198px;
       min-height: 30px;
       padding-left: 40px;
@@ -2280,12 +2337,26 @@ input[type="radio"].visually-hidden {
       cursor: pointer;
 }
 
+.form-elements__button-text2::before {
+      content: "";
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      width: 30px;
+      height: 30px;
+      background-image: url(../img/keyboard_back.svg);
+      background-size: 30px;
+      background-repeat: no-repeat;
+
+}
+
 .form-elements__button-text2:hover,
 .form-elements__button-text2:focus {
       color: #2d52da;
 }
 
 .form-elements__button-smalltext1 {
+      position: relative;
       min-width: 140px;
       min-height: 20px;
       padding-left: 30px;
@@ -2298,12 +2369,26 @@ input[type="radio"].visually-hidden {
       cursor: pointer;
 }
 
+.form-elements__button-smalltext1::before {
+      content: "";
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      width: 20px;
+      height: 20px;
+      background-image: url(../img/keyboard_back.svg);
+      background-size: 20px;
+      background-repeat: no-repeat;
+
+}
+
 .form-elements__button-smalltext1:hover,
 .form-elements__button-smalltext1:focus {
       color: rgba(45, 82, 218, .75);
 }
 
 .form-elements__button-smalltext2 {
+      position: relative;
       min-width: 140px;
       min-height: 20px;
       padding-left: 30px;
@@ -2314,6 +2399,19 @@ input[type="radio"].visually-hidden {
       font-size: 14px;
       line-height: 20px;
       cursor: pointer;
+}
+
+.form-elements__button-smalltext2::before {
+      content: "";
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      width: 20px;
+      height: 20px;
+      background-image: url(../img/keyboard_back.svg);
+      background-size: 20px;
+      background-repeat: no-repeat;
+
 }
 
 .form-elements__button-smalltext2:hover,
@@ -2411,6 +2509,7 @@ input[type="radio"].visually-hidden {
 }
 
 .form-elements__messenge-successicon1 {
+      position: relative;
       width: 326px;
       box-sizing: border-box;
       padding: 60px 20px 20px 20px;
@@ -2420,7 +2519,23 @@ input[type="radio"].visually-hidden {
       line-height: 25px;
 }
 
+.form-elements__messenge-successicon1::before {
+      content: "";
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+      background-color: #ffffff;
+      background-image: url(../img/done.svg);
+      background-size: 20px;
+      background-position: center;
+      background-repeat: no-repeat;
+}
+
 .form-elements__messenge-successicon2 {
+      position: relative;
       width: 326px;
       box-sizing: border-box;
       padding: 60px 20px 20px 20px;
@@ -2428,6 +2543,21 @@ input[type="radio"].visually-hidden {
       color: #0f995e;
       font-size: 17px;
       line-height: 25px;
+}
+
+.form-elements__messenge-successicon2::before {
+      content: "";
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+      background-color: #0f995e;
+      background-image: url(../img/done.svg);
+      background-size: 20px;
+      background-position: center;
+      background-repeat: no-repeat;
 }
 
 .form-elements__messenge-error1 {
@@ -2451,6 +2581,7 @@ input[type="radio"].visually-hidden {
 }
 
 .form-elements__messenge-erroricon1 {
+      position: relative;
       width: 326px;
       box-sizing: border-box;
       padding: 60px 20px 20px 20px;
@@ -2460,7 +2591,21 @@ input[type="radio"].visually-hidden {
       line-height: 25px;
 }
 
+.form-elements__messenge-erroricon1::before {
+      content: "";
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+      background-image: url(../img/sad.svg);
+      background-size: 25px;
+      background-repeat: no-repeat;
+}
+
 .form-elements__messenge-erroricon2 {
+      position: relative;
       width: 326px;
       box-sizing: border-box;
       padding: 60px 20px 20px 20px;
@@ -2468,6 +2613,19 @@ input[type="radio"].visually-hidden {
       color: #ea4d47;
       font-size: 17px;
       line-height: 25px;
+}
+
+.form-elements__messenge-erroricon2::before {
+      content: "";
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+      background-image: url(../img/sad.svg);
+      background-size: 25px;
+      background-repeat: no-repeat;
 }
 
 
@@ -4497,21 +4655,33 @@ input[type="radio"].visually-hidden {
       position: relative;
 }
 
-.more-photo__slider1-img {
+.more-photo__slider-container {
+      position: relative;
+      width: 1039px;
+      height: 692px;
+      padding: 0;
+}
+
+.more-photo__slider {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      transition: all is ease-in 0.1s;
+}
+
+
+// .more-photo__slider--noactive {
+//       opacity: 0.3;
+// }
+
+.more-photo__slider-img {
       width: 1039px;
       height: 692px;
       border-radius: 7px;
 }
 
-.more-photo__slider2-img {
-      width: 1039px;
-      height: 692px;
-      border-radius: 7px;
-}
-
-.more-photo__slider2 {
-      display: none;
-}
 
 .more-photo__button-forward {
       position: absolute;
@@ -4524,6 +4694,7 @@ input[type="radio"].visually-hidden {
       transition: all .1s ease-in-out;
       transition: all .1s ease-in-out;
       background: #ffffff url(../img/chevron_right.svg) top 50% left 50% no-repeat;
+      z-index: 3;
 }
 
 .more-photo__button-forward:hover,
@@ -4542,6 +4713,7 @@ input[type="radio"].visually-hidden {
       border-radius: 100px;
       transition: all .1s ease-in-out;
       background: #ffffff url(../img/chevron_left.svg) top 50% left 50% no-repeat;
+      z-index: 3;
 
 }
 
