--- a/css/style.scss
+++ b/css/style.scss
@@ -6084,3 +6084,67 @@ input[type="radio"].visually-hidden {
 .components__cart1-link:focus {
       color: rgba(45, 82, 218, .75);
 }
+
+
+// иконки
+
+.icon__main {
+      width: 100%;
+      position: relative;
+      margin-left: 250px;
+      padding: 80px 30px;
+}
+
+.icon__main-container {
+      width: 1039px;
+      margin: 0 auto;
+      padding: 0;
+}
+
+.icon__main-header {
+      display: flex;
+      flex-direction: column;
+      padding: 0;
+      padding-bottom: 80px;
+      margin-bottom: 80px;
+      border-bottom: 1px solid rgba(24, 25, 32, .1);
+
+}
+
+.icon__header-headline {
+      padding: 0;
+      margin: 0;
+      width: 680px;
+      font-size: 90px;
+      line-height: 90px;
+      font-weight: 700;
+      margin-bottom: 30px;
+}
+
+.icon__header-subtitle {
+      width: 670px;
+      font-size: 20px;
+      line-height: 30px;
+      margin: 0;
+      padding: 0;
+}
+
+.icon__headline {
+      align-self: flex-start;
+      box-sizing: border-box;
+      font-size: 30px;
+      line-height: 45px;
+      font-weight: 400;
+      margin-bottom: 30px;
+      color: #181920;
+}
+
+.icon__name {
+      font-size: 20px;
+      line-height: 30px;
+      color: rgba(24, 25, 32, .5);
+      padding: 0;
+      margin: 0;
+      margin-bottom: 10px;
+      font-weight: normal;
+}
