--- a/css/style.scss
+++ b/css/style.scss
@@ -6145,6 +6145,11 @@ input[type="radio"].visually-hidden {
       color: rgba(24, 25, 32, .5);
       padding: 0;
       margin: 0;
+      margin-bottom: 20px;
       margin-bottom: 10px;
       font-weight: normal;
+}
+
+.icon__sprite-wrapper {
+      margin-bottom: 20px;
 }
